# c-gha

./: .env.test  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
scripts/: deps.sh  enhanced_junit_converter.py
tests/: CMakeLists.txt  test_drivers.c  test_gpio.c  test_uart.c
